fix: Fixed header sizes, z-index variable naming, color shade utilities.

--- a/src/components/IHeader/css/_variables.scss
+++ b/src/components/IHeader/css/_variables.scss
@@ -26,7 +26,7 @@
     /// @name padding-right
     /// @type size
     ////
-    ----padding-right: #{0};
+    ----padding-right: #{0rem};
     ////
     /// The padding bottom of the header component
     /// @name padding-bottom
@@ -38,7 +38,7 @@
     /// @name padding-left
     /// @type size
     ////
-    ----padding-left: #{0};
+    ----padding-left: #{0rem};
     ////
     /// The padding of the header component
     /// @name padding
